Fix busy page element positioning overlap
With a mix of relative and absolute positioning, the main and footer
elements would overlap on a large enough screen. Using percentage
heights and viewport units for padding helps to fix the problem in a
way that works better cross-platform.

--- a/css/busy.css
+++ b/css/busy.css
@@ -9,9 +9,8 @@ html, body {
     display: none;
 }
 main {
-    position: relative;
-    top: 40%;
-    transform: translateY(-50%);
+    height: 70%;
+    padding-top: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,8 +22,7 @@ section {
 footer {
     width: 100%;
     text-align: center;
-    position: absolute;
-    bottom: 0;
+    height: 5%;
 }
 #yes {
     color: #FF5F4F;
